--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,38 @@
         <a class="navbar-brand" href="#">PhotoApp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
+            <li><%= link_to "Link1", "#"  %></li>
             <li><%= link_to "Link2", "/path2"  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
+
+            <ul class="nav navbar-right col-md-4">
+
+              <% if current_user %>
+
+              <li class="col-md-8 user-name">
+
+                <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25,class:"row")).html_safe,edit_user_registration_path, title: 'Edit Profile' %>
+              </li>
+
+                <li class="col-md-1">  </li>
+
+                <li class="col logout"><%= link_to("Logout",destroy_user_session_path , class:"btn btn-danger",title:"Logout",method: :delete) %>
+                  
+                </li>
+
+                <% else %>
+
+                <li class="col-md-4 signin">
+
+                <%= link_to("Signin",new_user_session_path,class:"btn btn-primary",title:"Signin")%>
+
+                </li>
+
+                <% end %>
+
+            </ul>
+
+            </ul>
           </ul>
         </div>
       </div>
@@ -58,21 +87,10 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
+        <div class="col-lg-14">
+          <%= render 'layouts/messages' %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
       </div><!--/row-->
 
       <footer>
